infrastructure/observability/ingress/base/ingress-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alertmanager.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: alertmanager-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://avatars1.githubusercontent.com/u/3380462?s=200&v=4"
    dashboard.zippelf.com/display-name: "Alertmanager"
    dashboard.zippelf.com/docs: "https://prometheus.io/docs/alerting/latest/alertmanager/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-alertmanager-ingress
  routes:
    - match: Host(`alertmanager.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: alertmanager-gatekeeper
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
